tests/fixtures/errors/e0808_or_arm_missing_binding.mimz
// expect: E0808
enum Op { Add(a: bits[8], b: bits[8]), Nop }
module M {
  in cmd: Op
  out o: bits[8]
  o = match cmd {
    Op.Add(a, b), Op.Nop => a
    _ => 0
  }
}
